# discord-ext-voice-recv

./: README.md  data.json  pyproject.toml
.github/workflows/: tests.yml
discord/ext/voice_recv/: __init__.py  buffer.py  dave.py  gateway.py  opus.py  reader.py  rtp.py  sinks.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_3f4591bf7aa92764_buffer_py.html  z_3f4591bf7aa92764_dave_py.html  z_3f4591bf7aa92764_gateway_py.html  z_3f4591bf7aa92764_opus_py.html  z_3f4591bf7aa92764_reader_py.html  z_3f4591bf7aa92764_router_py.html  z_3f4591bf7aa92764_rtp_py.html  z_3f4591bf7aa92764_silence_py.html  z_3f4591bf7aa92764_sinks_py.html  z_3f4591bf7aa92764_types_py.html  z_3f4591bf7aa92764_utils_py.html  z_3f4591bf7aa92764_video_py.html  z_3f4591bf7aa92764_voice_client_py.html  z_7acab2d3bb1eac81_localplayback_py.html  z_7acab2d3bb1eac81_speechrecognition_py.html
tests/: test_bandwidth_probe.py  test_buffer.py  test_dave.py  test_jitter_buffer.py  test_reader.py  test_router.py  test_rtp.py  test_rtp_padding.py  test_rtp_padding_wiring.py  test_sinks.py  test_utils.py  test_video.py  test_voice_client.py
