[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-ext-voice-recv"
version = "0.5.3a191"
description = "Experimental voice receive extension for discord.py"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Imayhaveborkedit" },
    { name = "Victor Zeng", email = "zacker150@hotmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "discord.py[voice]>=2.7.1",
]

[project.optional-dependencies]
extras_speech = [
    "SpeechRecognition>=3.17.0",
]
extras_local = [
    "PyAudio>=0.2.14",
]
extras = [
    "SpeechRecognition>=3.17.0",
    "PyAudio>=0.2.14",
]

[project.urls]
Homepage = "https://github.com/imayhaveborkedit/discord-ext-voice-recv"

[tool.setuptools]
packages = [
    "discord.ext.voice_recv",
    "discord.ext.voice_recv.extras",
]
zip-safe = false
include-package-data = true

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = [
    "discord/ext/voice_recv",
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
]
reportUnnecessaryTypeIgnoreComment = "warning"
# reportUnusedImport = "error"
pythonVersion = "3.9"
typeCheckingMode = "basic"
